[package]
name = "rand-compat"
description = "A compatibility layer for different versions of rand_core"
repository = "https://github.com/ryankurte/rust-rand-compat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
std = [ "rand_core_0_6/std", "rand_0_8/std", "rand_core_0_5/std", "rand_0_7/std" ]
default = [ "std" ]

[dependencies]
rand_core_0_6 = { package = "rand_core", version = "0.6.0", default_features = false }
rand_core_0_5= { package = "rand_core", version = "0.5.0", default_features = false }

rand_0_8 = { package = "rand", version = "0.8.0", default_features = false }
rand_0_7 = { package = "rand", version = "0.7.0", default_features = false }

getrandom = { version = "0.2.7", default_features = false }

